# Le-Concierge

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  CLAUDE.md  CLAUDE_PROJECT_INSTRUCTIONS.md  Cargo.toml  LICENSE  README.md  justfile  lefthook.yml  package.json  rust-toolchain.toml  rustfmt.toml
.sqlx/: query-007a3570d367428699452c8a240f490ff62249efbe5b76e58bae714b63fc05e1.json  query-0be5c54bb1f757a979c1f6b73cde9dfc0c1cdd4a10bff41c26afaef6efa3d205.json  query-164a42b4ba68787919ed11acad630f492dcba8f6d27023e8b1583384153eb480.json  query-1a4f4cd2e70841f8c0de6413b8bf142464d33588677f1167ee7584601c3b30b3.json  query-1e8c1c16a496b4e3ddb061a2f0b28dfc136d7cadf3e2ebc0e0b53aed35b40759.json  query-312a9fda927e952b1a81d8eb426dab2b6f47d937f29113bda4bf93a007a4faee.json  query-36fc779d7f5240f39bf8e59d0622f9f51d6ad75c2fd1a2a6d87486adcd14533e.json  query-3989338a8bb0486826c3a5735e24394428b8986c82a8372df5e0e806ef7a72e9.json  query-3d1e3e4deb3f1ef1da0e58c41cc2907f77f836ec76eae78426f8571848cca523.json  query-3d9343a6d7d30542196f7b6e548727c6f8ed85e3e5aeb618a53fddc2b1bfbc35.json  query-3e2ad1119c4ffa085d5c59be09aa6a7589cd947fc51b22143f87df9299404f0a.json  query-50168e399ca7232d14841f883bbc145856e817869b6c45bdd45c7f9ea03bf8ec.json  query-521d7dddac540e0c966b1bf4f8aa96a9baf663414a7eee0310eee07f4c02471e.json  query-52cfb6427bbc2abfdee22a71edd5c7a1ef142610ac41abf4db4a4d84146cf737.json  query-66178794022c221c19d9f0db8801ae5ba17d3795f48d69f779c1b3051c1e660f.json  query-70690e8f7dc6aa2ec06a8008af45aa96457d1fd52110dcaac5f83bda57c09a3c.json  query-7c07517a13fa3152d0ac9f2bdc6812d362a17f4cabf9f15cddd0a5f24f0475b3.json  query-81b7faee0bd33d18323d72365700cd79b0197940ea8df4ebc3c1ec6a055134c6.json  query-84a6e8e8a3885ac5ff12bf8c9607e5d1caf185f0e3e3c72f96e1116ff8eb4937.json  query-84abebf7327ee61830070c45bc78b7c22b9e4f0e0a38bffafdee006efa42f4f2.json  query-8b44d38cfd029d699120d29884508ccc016c4b90a89a7106e3153a54bfc838db.json  query-8bdf34411727ac55b5d1223688175196db3687616cd19351484edd65faffd3e1.json  query-a2a63b13a9a9e6f7ad09ba5c977409d6f06dfa54dbda98bbdc0275e26e6422ab.json  query-a6c050f615892bd8223abe14a9aa70e4928701ba9c63c467a19e84c60bc56d0a.json  query-b234813c524075876741830c287286643ff25430bafedc8cca4ef5b473802d99.json  query-b5eb2b2ca70dfac8f8ac112ba200269ae1a12f4db7324739de18ccfa02c6b18e.json  query-bf4232817fec0c59ee085722e7c801fb1bac81c732e4a870813b16fa02adec46.json  query-c36ae8256db6d14dda709ff2b3be2fceafb43fc89773243449ad11012ee21651.json  query-c422245a2a1f94b10314bcc507350bfa8e34544b5e5590d92166c0e14f1e4b0a.json  query-c73be8be12e1587301718c535b3c1fc549e1154a53ad04dc6bf3c5fc6c2b05a6.json  query-d210461a7f627f8e66b43160d34db1cb192bb0f000ff6fc0a0c2e14cc838f390.json  query-dad5fc5be0d42c01a4c024051793637d402a3382493b5a4736ed7cebdb475b8a.json  query-dc3ec89a5d3c840fda278bb826acd34a96c7919c39c6ff9012584bcb55da9c0c.json  query-ddcb0ca492719920f2cc9d9fade41506d2feee4e6740953fb77c7fa3ad3af235.json  query-e3f182b06cedd17b150dc44a28e3e5811c61280416c84c1f545dffff83356308.json  query-ed4526d556d03f29ab5af318559ac63e5df8fc400f26bed488112e04452b4a6a.json  query-f20aac7bd29fe7ee323a1113e768be6631b2e092d3d317c7feef49b20e088e20.json  query-f4bbaa7c39cd8b5b6b814be9c8a57b80f4905f550921ad593b8ca766a60c2751.json  query-f80f64ed6899c7284c339e718567b51a87a648a71e5763d8f14563edf975c0ce.json  query-fede3c45e8ad32c85b469df7ebc6bef28c03fdade5ca1f5c9fb50950dc88e757.json
apps/api/: .dockerignore  .env.example  Cargo.toml  Dockerfile
apps/api/config/: default.toml
apps/api/migrations/: 0001_init_auth.sql  0002_2fa_totp.sql  0003_properties.sql  0004_invites.sql
apps/api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  openapi.rs  state.rs  telemetry.rs
apps/api/src/audit/: mod.rs  record.rs
apps/api/src/auth/: domain.rs  dto.rs  error.rs  hash.rs  mod.rs  repo.rs  routes.rs  service.rs
apps/api/src/auth/totp/: codes.rs  crypto.rs  domain.rs  dto.rs  generator.rs  mod.rs  repo.rs  routes.rs  service.rs
apps/api/src/email/: log_sender.rs  mod.rs  smtp_sender.rs
apps/api/src/health/: dto.rs  mod.rs  routes.rs
apps/api/src/invites/: domain.rs  dto.rs  error.rs  mod.rs  repo.rs  routes.rs  service.rs
apps/api/src/properties/: domain.rs  dto.rs  error.rs  mod.rs  repo.rs  routes.rs  service.rs
apps/api/src/session/: cookie.rs  csrf.rs  dto.rs  error.rs  extractor.rs  mod.rs  service.rs  store.rs
apps/api/src/tenancy/: mod.rs
apps/api/tests/: auth.rs  auth_http.rs  health.rs  invites.rs  properties.rs  tenant_isolation.rs  totp_http.rs
apps/api/tests/common/: db.rs  email.rs  mod.rs  redis.rs
apps/web/: .env.example  .gitignore  components.json  env.d.ts  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.vue  main.ts
apps/web/src/assets/: main.css
apps/web/src/components/ui/: Button.vue  Card.vue  FormField.vue  Input.vue  Label.vue
apps/web/src/composables/: useAuth.ts  useHealth.ts  useInvites.ts  useProperties.ts  useTheme.ts
apps/web/src/i18n/: index.ts
apps/web/src/i18n/locales/: en.json  fr.json
apps/web/src/lib/: api-client.ts  api-contracts.ts  utils.ts
apps/web/src/router/: index.ts
apps/web/src/stores/: activeOrg.ts  session.ts
apps/web/src/views/: DashboardView.vue  HomeView.vue  LoginView.vue  SettingsView.vue  SignupView.vue
apps/web/src/views/auth/: TotpChallengeView.vue  TotpSetupView.vue
apps/web/src/views/properties/: PropertyFormView.vue  PropertyListView.vue
apps/web/src/views/team/: AcceptInviteView.vue  TeamView.vue
apps/web/tests/: HomeView.spec.ts  LoginView.spec.ts  router-guards.spec.ts  session-store.spec.ts  setup.ts
docs/: architecture.md  ui.md
docs/adr/: 0001-stack-choice.md  0002-security-baseline.md  0003-monorepo-layout.md  0004-dev-compose-stack.md  0005-auth-scheme.md  0006-sessions-csrf.md  0007-2fa-totp.md  0008-multi-tenant-isolation.md  0009-team-invites.md  0010-dev-email.md  template.md
infra/docker/: .env.example  Caddyfile  compose.yaml
