[package]
name = "api"
version = "0.1.0"
description = "Le Concierge HTTP API"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
# --- async runtime -----------------------------------------------------------
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "net", "time", "sync"] }

# --- http framework ----------------------------------------------------------
axum = { version = "0.8", features = ["macros", "http2", "tokio"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "trace",
    "timeout",
    "compression-gzip",
    "compression-br",
    "cors",
    "request-id",
    "set-header",
    "sensitive-headers",
    "propagate-header",
    "catch-panic",
] }
# Rate limiting for /auth/* — in-memory state; multi-instance needs a
# Redis-backed store (deferred, ADR 0006). Must track axum 0.8's
# axum_core 0.5 to avoid two versions of the crate in the dep graph;
# tower_governor 0.7+ migrated.
tower_governor = "0.7"
http = "1"

# --- serialization -----------------------------------------------------------
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- errors ------------------------------------------------------------------
# thiserror is used in library modules (domain errors).
# anyhow is used only in main.rs / bootstrap per CLAUDE.md §2.1.
thiserror = "2"
anyhow = "1"

# --- observability -----------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
    "registry",
    "std",
] }

# --- config ------------------------------------------------------------------
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = "0.15"

# --- database ----------------------------------------------------------------
# Lazy pool: no connection is established at boot. First query will attempt to
# connect; integration tests for non-DB endpoints therefore do not require a
# running Postgres.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

# --- OpenAPI / docs ----------------------------------------------------------
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }

# --- auth --------------------------------------------------------------------
# Argon2id (OWASP-recommended password hashing), pepper stored as `SecretString`
# to avoid accidental leaks via Debug / logs, RFC-compliant email validation.
argon2 = { version = "0.5", features = ["std"] }
secrecy = { version = "0.10", features = ["serde"] }
email_address = "0.2"
# RFC 6238 TOTP (CLAUDE.md §3.1), AES-256-GCM for TOTP secret at rest
# (CLAUDE.md §3.3 / ADR 0007), base32 for the `otpauth://` secret rendering.
totp-rs = { version = "5", default-features = false, features = ["otpauth"] }
aes-gcm = "0.10"
base32 = "0.5"
hex = "0.4"

# --- sessions / redis --------------------------------------------------------
# Opaque server-side sessions (no JWT, CLAUDE.md §3.1 / ADR 0006). `redis`
# is the canonical client; we use the tokio async API through a connection
# manager (auto-reconnect, pooling).
redis = { version = "0.27", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
] }
# SHA-256 for the audit hash chain. `rand` for CSPRNG-based session IDs.
# `base64` encodes those IDs for the `lc_sid` cookie. `time` provides the
# `Duration` type expected by the `cookie` crate (pulled in transitively
# by `axum-extra`).
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
time = "0.3"

# --- misc --------------------------------------------------------------------
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
# End-to-end integration tests spawn the real app and hit it over HTTP.
# `cookies` enables the cookie jar used by the auth-flow tests.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1.41", features = ["full", "test-util"] }

# Ephemeral Postgres + Redis containers for DB-backed integration tests.
# CLAUDE.md §4.2 forbids mocking the DB.
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }
